// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChannelSliders > HSL mode > renders correctly 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="ChannelSliders"
>
  <div
    class="flex items-center gap-2"
    data-testid="HueSlider"
  >
    H
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, rgb(255, 0, 0), rgb(255, 255, 0), rgb(0, 255, 0), rgb(0, 255, 255), rgb(0, 0, 255), rgb(255, 0, 255), rgb(255, 0, 0)); touch-action: none;"
      >
        <input
          aria-label="Hue"
          aria-orientation="horizontal"
          aria-valuemax="359.9"
          aria-valuemin="0"
          aria-valuenow="209.59"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="359.9"
          min="0"
          step="1"
          tabindex="0"
          type="range"
          value="209.59"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(58.236% - 11.647px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Hue"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="210"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        °
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="SaturationSlider"
  >
    S
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, rgb(109, 109, 109), rgb(0, 110, 217)); touch-action: none;"
      >
        <input
          aria-label="Saturation"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="100"
          min="0"
          step="1"
          tabindex="0"
          type="range"
          value="100"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(100% - 20px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Saturation"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="100"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="LightnessSlider"
  >
    L
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 129, 255), rgb(255, 255, 255)); touch-action: none;"
      >
        <input
          aria-label="Lightness"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="42.55"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="100"
          min="0"
          step="1"
          tabindex="0"
          type="range"
          value="42.55"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(42.55% - 8.51px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Lightness"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="43"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`ChannelSliders > OKLCH mode > renders correctly 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="ChannelSliders"
>
  <div
    class="flex items-center gap-2"
    data-testid="LightnessSlider"
  >
    L
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, oklch(0 0.194 250), oklch(0.54 0.194 250), oklch(1 0.194 250)); touch-action: none;"
      >
        <input
          aria-label="Lightness"
          aria-orientation="horizontal"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0.54"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="1"
          min="0"
          step="0.001"
          tabindex="0"
          type="range"
          value="0.54"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(54% - 10.8px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Lightness"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="54.0"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="ChromaSlider"
  >
    C
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, oklch(0.54 0 250), oklch(0.54 0.19733 250)); touch-action: none;"
      >
        <input
          aria-label="Chroma"
          aria-orientation="horizontal"
          aria-valuemax="0.19733"
          aria-valuemin="0"
          aria-valuenow="0.194"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="0.19733"
          min="0"
          step="0.001"
          tabindex="0"
          type="range"
          value="0.194"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(98.312% - 19.662px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Chroma"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="0.194"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="HueSlider"
  >
    H
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, oklch(0.7 0.4 0), oklch(0.7 0.4 60), oklch(0.7 0.4 120), oklch(0.7 0.4 180), oklch(0.7 0.4 240), oklch(0.7 0.4 300), oklch(0.7 0.4 0)); touch-action: none;"
      >
        <input
          aria-label="Hue"
          aria-orientation="horizontal"
          aria-valuemax="360"
          aria-valuemin="0"
          aria-valuenow="250"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="360"
          min="0"
          step="0.01"
          tabindex="0"
          type="range"
          value="250"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(69.444% - 13.889px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Hue"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="250.0"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        °
      </span>
    </div>
  </div>
</div>
`;

exports[`ChannelSliders > RGB mode > renders correctly 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="ChannelSliders"
>
  <div
    class="flex items-center gap-2"
    data-testid="RedSlider"
  >
    R
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(255, 0, 0)); touch-action: none;"
      >
        <input
          aria-label="Red"
          aria-orientation="horizontal"
          aria-valuemax="255"
          aria-valuemin="0"
          aria-valuenow="0"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="255"
          min="0"
          step="1"
          tabindex="0"
          type="range"
          value="0"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(0% - 0px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Red"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="0"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="GreenSlider"
  >
    G
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 255, 0)); touch-action: none;"
      >
        <input
          aria-label="Green"
          aria-orientation="horizontal"
          aria-valuemax="255"
          aria-valuemin="0"
          aria-valuenow="110"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="255"
          min="0"
          step="1"
          tabindex="0"
          type="range"
          value="110"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(43.137% - 8.627px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Green"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="110"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="BlueSlider"
  >
    B
    <div
      class="flex-1 py-1"
    >
      <div
        class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
        style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 255)); touch-action: none;"
      >
        <input
          aria-label="Blue"
          aria-orientation="horizontal"
          aria-valuemax="255"
          aria-valuemin="0"
          aria-valuenow="217"
          class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
          max="255"
          min="0"
          step="1"
          tabindex="0"
          type="range"
          value="217"
        />
        <div
          aria-hidden="true"
          class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
          data-testid="GradientSliderThumb"
          style="left: calc(85.098% - 17.02px);"
        />
      </div>
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Blue"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="217"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
</div>
`;
